update Inspection/Notice Exception